added method and member call support for rule token added fragment support for methods and classes